--- a/user_line/pages/login/index.html
+++ b/user_line/pages/login/index.html
@@ -18,22 +18,7 @@
                     Company Time
                 </div>
                 <div class="management">
-                    management System
-                </div>
-            </div>
-            <div class="round">
-                <div class="icon">
-                    <i class="fa-regular fa-user"></i>
-                </div>
-                <div class="small-round">
-                    <div class="dropdown">
-                        <div class="icon-dropdown">
-                            <i class="fa-solid fa-chevron-down"></i>
-                        </div>
-                        <div class="dropdown-content">
-                            <a href="../login/index.html">ออกจากระบบ</a>
-                        </div>
-                    </div>
+                    Management System
                 </div>
             </div>
         </div>
@@ -41,30 +26,32 @@
             <div class="name">
                 กรุณากรอก Username&Password
             </div>
-            <div class="fill-info">
-                <input class="message" type="text" name="employeename" placeholder="username" >
-                <div class="section-turn">
-                    <input type="password" value="" id="myInput" placeholder="password">
-                    <img class="turn-off" src="../../assets/icons/ic-turn off.png" onclick="myFunction()">
-                    <img class="turn-on" src="../../assets/icons/Group-showpassword.png" style="display: none;" onclick="show()">
-                </div>
-            </div>
-            <div class="chack-password">
-                <div class="remember-password">
-                    <input class="" type="checkbox">
-                    จำรหัสผ่านไว้
-                </div>
-                <a href="./forgot.html">
-                    <div class="forgot-password">
-                        ลืมรหัสผ่าน
+            <form >
+                <div class="fill-info">
+                    <input class="message" type="text" name="employeename" placeholder="username"  required>
+                    <div class="section-turn">
+                        <input type="password" value="" id="myInput" placeholder="password" required>
+                        <img class="turn-off" src="../../assets/icons/ic-turn off.png" onclick="myFunction()">
+                        <img class="turn-on" src="../../assets/icons/Group-showpassword.png" style="display: none;" onclick="show()">
                     </div>
-                </a>
-            </div>
-            <button class="button-login" type="submit">
-                <div class="submit">
-                    เข้าสู่ระบบ
                 </div>
-            </button>
+                <div class="chack-password">
+                    <div class="remember-password">
+                        <input class="" type="checkbox">
+                        จำรหัสผ่านไว้
+                    </div>
+                    <a href="./forgot.html">
+                        <div class="forgot-password">
+                            ลืมรหัสผ่าน
+                        </div>
+                    </a>
+                </div>
+                <button class="button-login" type="submit" onclick="mylogin()">
+                    <div class="submit">
+                        เข้าสู่ระบบ
+                    </div>
+                </button>
+            </form>
         </div>
     </div>
     <script>
@@ -74,7 +61,6 @@
             y[0].style.display = "none";
             var z = document.getElementsByClassName("turn-on");
             z[0].style.display = "block";
-
             if (x.type === "password") {
                 x.type = "text";
             } else {
@@ -94,6 +80,19 @@
             } else {
                 x.type = "password";
             }
+        }
+        function mylogin() {
+            const x = document.getElementsByClassName("button-login");
+            const queryString = window.location.search;
+            console.log(queryString);
+            const urlParams = new URLSearchParams(queryString);
+            const page = urlParams.get('page')
+            if (page === 'over-time') {
+                window.location.href = '/user_line/pages/over-time/fill-in-overtime.html';
+            } else {
+                window.location.href = '/user_line/pages/record/record-time-for-work.html';
+            }
+            console.log(page);
         }
     </script>
 </body>
