--- a/user_line/pages/record/record-time-for-work.html
+++ b/user_line/pages/record/record-time-for-work.html
@@ -20,20 +20,24 @@
                     Company Time
                 </div>
                 <div class="management">
-                    management System
+                    Management System
                 </div>
             </div>
             <div class="round">
                 <div class="icon">
                     <i class="fa-regular fa-user"></i>
                 </div>
-                <div class="small-round">
+                <div class="small-round" onclick="mydropdownshow()">
                     <div class="dropdown">
                         <div class="icon-dropdown">
                             <i class="fa-solid fa-chevron-down"></i>
                         </div>
-                        <div class="dropdown-content">
-                            <a href="../login/index.html">ออกจากระบบ</a>
+                        <div class="w3-dropdown-click">
+                            <div class="w3-button w3-black">
+                            </div>
+                            <div id="Demo" class="w3-dropdown-content w3-bar-block w3-border">
+                                <a href="../login/index.html" class="w3-bar-item w3-button" >ออกจากระบบ </a>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -124,12 +128,27 @@
             modal.style.display = "none";
         }
         window.onclick = function (event) {
-            console.log("gggg")
             if (event.target == modal) {
                 modal.style.display = "none";
             }
         }
-    </script>
+        // function mydropdownshow(){
+        //     var x = document.getElementsByClassName("w3-dropdown-content w3-bar-block w3-border");
+        //     console.log(x);
+        //     x[0].style.display = "block";
+
+        // }
+        function mydropdownshow() {
+                var x = document.getElementById("Demo");
+                if (x.className.indexOf("w3-show") == -1) {
+                    x.className += " w3-show";
+                } else {
+                    x.className = x.className.replace(" w3-show", "");
+                }
+            }
+            
+        
+</script>
 </body>
 
 </html>
