firebase web login

--- a/user_line/pages/login/index.html
+++ b/user_line/pages/login/index.html
@@ -9,6 +9,7 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link href="https://fonts.googleapis.com/css2?family=Sarabun&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../../style/index.css">
+    <script src="./app.js" type="module"></script>
 </head>
 <body>
     <div class="login">
@@ -26,37 +27,38 @@
             <div class="name">
                 กรุณากรอก Username&Password
             </div>
-            <form >
-                <div class="fill-info">
-                    <input class="message" type="text" name="employeename" placeholder="username"  required>
-                    <div class="section-turn">
-                        <input type="password" value="" id="myInput" placeholder="password" required>
-                        <img class="turn-off" src="../../assets/icons/ic-turn off.png" onclick="myFunction()">
-                        <img class="turn-on" src="../../assets/icons/Group-showpassword.png" style="display: none;" onclick="show()">
-                    </div>
-                </div>
-                <div class="chack-password">
-                    <div class="remember-password">
-                        <input class="" type="checkbox">
-                        จำรหัสผ่านไว้
-                    </div>
-                    <a href="./forgot.html">
-                        <div class="forgot-password">
-                            ลืมรหัสผ่าน
+                <div>
+                    <div class="fill-info">
+                        <input class="message" type="text" id="email" name="employeename" placeholder="username" required>
+                        <div class="section-turn">
+                            <input type="password" id="password" placeholder="password" required>
+                            <img class="turn-off" src="../../assets/icons/ic-turn off.png" onclick="myFunction()">
+                            <img class="turn-on" src="../../assets/icons/Group-showpassword.png" style="display: none;" onclick="show()">
                         </div>
-                    </a>
-                </div>
-                <button class="button-login" type="submit" onclick="mylogin()">
-                    <div class="submit">
-                        เข้าสู่ระบบ
                     </div>
-                </button>
-            </form>
+                    <div class="chack-password">
+                        <div class="remember-password">
+                            <input class="" type="checkbox">
+                            จำรหัสผ่านไว้
+                        </div>
+                        <a href="./forgot.html">
+                            <div class="forgot-password">
+                                ลืมรหัสผ่าน
+                            </div>
+                        </a>
+                    </div>
+                    <button class="button-login" type="submit" id="login" value="login" onclick="mylogin()">
+                        <div class="submit">
+                            เข้าสู่ระบบ
+                        </div>
+                    </button>
+                </div>
+           
         </div>
     </div>
-    <script>
+    <script >
         function myFunction() {
-            var x = document.getElementById("myInput");
+            var x = document.getElementById("password");
             var y = document.getElementsByClassName("turn-off");
             y[0].style.display = "none";
             var z = document.getElementsByClassName("turn-on");
@@ -70,7 +72,7 @@
         }
         function show() {
             console.log(y)
-            var x = document.getElementById("myInput");
+            var x = document.getElementById("password");
             var z = document.getElementsByClassName("turn-on");
             z[0].style.display = "none";
             var y = document.getElementsByClassName("turn-off");
@@ -84,16 +86,17 @@
         function mylogin() {
             const x = document.getElementsByClassName("button-login");
             const queryString = window.location.search;
-            console.log(queryString);
+            // console.log(queryString);
             const urlParams = new URLSearchParams(queryString);
             const page = urlParams.get('page')
             if (page === 'over-time') {
-                window.location.href = '/user_line/pages/over-time/fill-in-overtime.html';
+                // window.location.href = '/user_line/pages/over-time/fill-in-overtime.html';
             } else {
-                window.location.href = '/user_line/pages/record/record-time-for-work.html';
+                // window.location.href = '/user_line/pages/record/record-time-for-work.html';
             }
-            console.log(page);
+            // console.log(page);
         }
+       
     </script>
 </body>
 </html>
