--- a/user_line/pages/login/index.html
+++ b/user_line/pages/login/index.html
@@ -47,7 +47,7 @@
                             </div>
                         </a>
                     </div>
-                    <button class="button-login" type="submit" id="login" value="login" onclick="mylogin()">
+                    <button class="button-login" type="submit" id="logout" value="logout" onclick="mylogin()">
                         <div class="submit">
                             เข้าสู่ระบบ
                         </div>
