--- a/user_line/pages/login/index.html
+++ b/user_line/pages/login/index.html
@@ -29,7 +29,7 @@
             </div>
                 <div>
                     <div class="fill-info">
-                        <input class="message" type="text" id="email" name="employeename" placeholder="username" required>
+                        <input class="message" type="text" id="email" name="employeename" placeholder="email" required>
                         <div class="section-turn">
                             <input type="password" id="password" placeholder="password" required>
                             <img class="turn-off" src="../../assets/icons/ic-turn off.png" onclick="myFunction()">
@@ -47,7 +47,7 @@
                             </div>
                         </a>
                     </div>
-                    <button class="button-login" type="submit" id="logout" value="logout" onclick="mylogin()">
+                    <button class="button-login" type="submit" id="login" value="login" onclick="mylogin()">
                         <div class="submit">
                             เข้าสู่ระบบ
                         </div>
@@ -56,6 +56,7 @@
            
         </div>
     </div>
+    <img src="" alt="" id="myimg">
     <script >
         function myFunction() {
             var x = document.getElementById("password");
