--- a/admin/pages/index.html
+++ b/admin/pages/index.html
@@ -41,7 +41,7 @@
                     </div>
                 </div>
             </div>
-            <button class="button" onclick="myFunction()">
+            <button class="button">
                 <div class="submit-login">
                     Login
                 </div>
@@ -131,8 +131,7 @@ button:hover{
 }
 .ic-login{
     color: #ffffff;
-    width: 64px;
-    height: 64px;
+    
 }
 .company {
     color: #144568;
